<resources>
    <string name="app_name">AND_Assignment</string>
    <string name="open">AND_Assignment</string>
    <string name="close">AND_Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">Name: Lê Mạnh Quỳnh</string>
    <string name="age_label">Age: 19</string>
    <string name="address">Address: Bắc Từ Niêm</string>
    <string name="email">Email: quynhlmph32353@fpt.edu.vn</string>
    <string name="subject">Subject: Android 2</string>
    <string name="school">School: Fpt Polytechnic</string>
    <string name="additional_info_label">Additional Info:</string>
    <string name="avatar_description">Avatar image</string>
</resources>